--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>CallBacks/Promises/Async Await</title>
 </head>
 <body>
-    
-    <script src="promises.js"></script>
+
+    <script src="callbacks.js"></script>
 </body>
 </html>
